fixed word wrap

--- a/app.css
+++ b/app.css
@@ -26,5 +26,3 @@ body{
     padding: 20px;
     background-color: rgb(240, 240, 240)
 }
-#canvas{
-}
